# santoka

./: package-lock.json  package.json
data-extraction/: .gitignore  .prettierrc  package-lock.json  package.json  readme.md  tailwind.config.js
data-extraction/src/lib/: Arrays.ts  Nullishes.ts  Numbers.ts  Publications.ts  States.ts  Strings.ts  Translators.ts
data-extraction/src/routes/: +page.svelte  RecordTable.svelte  TranslatorTable.svelte
data-extraction/src/routes/detect-language/: +server.ts  ClientApi.ts
data-extraction/src/scripts/: convertTypeScriptToCsv.ts
data-extraction/static/files/: js
data/2023-06-26T14:52:00.000Z/: database.json  scraperOutput.ts  standalone.ts
data/2023-06-26T14:52:00.000Z/typescript-types/: Database.ts  Publication.ts  Translator.ts
diox/: Cargo.toml
diox/src/: main.rs
hello-wasm/: Cargo.toml
rust/: .gitignore  Cargo.toml  build.rs  scripts  tailwind.config.js
rust-v1/: Cargo.toml
rust-v1/built/: index.html
rust-v1/html_generator/src/: database.rs
rust-v1/html_generator/src/components/: mod.rs
rust-v1/html_generator/src/routes/: mod.rs  test_mod.rs
rust-workspace/: Cargo.toml
rust-workspace/browser/src/: lib.rs
rust-workspace/built/: browser_bg.wasm
rust-workspace/dev_and_build_server/: Cargo.toml
rust-workspace/dev_and_build_server/src/: database.rs  main.rs
rust-workspace/dev_and_build_server/src/assets/: mod.rs
rust-workspace/dev_and_build_server/src/routes/: mod.rs
rust-workspace/dev_and_build_server/src/routes/browser_bg_wasm/: mod.rs
rust-workspace/dev_and_build_server/src/routes/build_time/: mod.rs
rust-workspace/shared/: Cargo.toml
rust-workspace/shared/src/: lib.rs
rust-workspace/shared/src/components/: show_if_scrolled.rs
rust/bindings/: Poem.ts  PoemId.ts  PublicationId.ts  TranslatorId.ts
rust/browser/: Cargo.toml
rust/browser/src/: lib.rs
rust/browser/src/extensions/: element.rs
rust/built/: browser.js  browser_bg.wasm  build-time  build-time.json  index.html  main.css  site-build-time
rust/built/contact/: index.html
rust/built/non-preview-poems/0/: index.html
rust/built/non-preview-poems/11/: index.html
rust/built/non-preview-poems/12/: index.html
rust/built/non-preview-poems/14/: index.html
rust/built/non-preview-poems/18/: index.html
rust/built/non-preview-poems/20/: index.html
rust/built/non-preview-poems/8/: index.html
rust/built/publications/13/non-preview-poems/: index.html
rust/built/publications/15/non-preview-poems/: index.html
rust/built/publications/16/non-preview-poems/: index.html
rust/built/publications/17/non-preview-poems/: index.html
rust/built/publications/2/non-preview-poems/: index.html
rust/built/publications/3/non-preview-poems/: index.html
rust/built/publications/5/non-preview-poems/: index.html
rust/built/publications/6/non-preview-poems/: index.html
rust/built/publications/7/non-preview-poems/: index.html
rust/built/publications/9/non-preview-poems/: index.html
rust/dev_and_build_server/: Cargo.toml
rust/dev_and_build_server/src/: boot_browser.js  main.rs  prelude.rs
rust/dev_and_build_server/src/assets/: asset_path.rs  css_asset.rs  html_asset.rs  image_asset.rs  image_optimization.rs  js_asset.rs  json_asset.rs  mod.rs  wasm_asset.rs
rust/dev_and_build_server/src/routes/: mod.rs
rust/dev_and_build_server/src/routes/hasui_dark_jpeg/: mod.rs
rust/dev_and_build_server/src/routes/main_css/: mod.rs
rust/html_generator/: Cargo.toml
rust/html_generator/src/: database.rs  main.rs  original_mod.rs  prelude.rs  test.rs
rust/html_generator/src/assets/: html_asset.rs  image_asset.rs  mod.rs
rust/html_generator/src/routes/: mod.rs  prelude.rs
rust/html_generator/src/routes/components/: mod.rs
rust/html_generator/src/routes/components/app_link/: mod.rs
rust/html_generator/src/routes/components/image/: mod.rs
rust/html_generator/src/routes/components/light_dark_image/: mod.rs
rust/html_generator/src/routes/css_class_groups/: mod.rs
rust/html_generator/src/routes/layout/: mod.rs
rust/html_generator/src/routes/non_preview_poems/: mod.rs
rust/html_generator/src/routes/not_found/: mod.rs
rust/serverless_functions/: wrangler.toml
rust/serverless_functions/src/: lib.rs
rust/shared/: Cargo.toml
rust/shared/src/: lib.rs
rust/shared/src/components/: append_html.rs  mod.rs  parallax.rs  replace.rs  show_hide.rs  show_if_scrolled.rs
rust/shared/src/extensions/: into_rc.rs  mod.rs  string.rs
rust/shared/src/extensions/browser/: document.rs  element.rs  mod.rs  node_list.rs  vec_html_element.rs
rust/shared/src/server/: mod.rs
rust/src/: assets.rs  boot_browser.js  database.rs  main.css  main.rs  manifest.rs  prelude.rs
rust/src/assets/: mod.rs
rust/src/extensions/: mod.rs
rust/src/routes/: mod.rs
rust/src/routes/browser_js/: mod.rs
rust/src/routes/hasui_light_jpeg/: mod.rs
rust/src/routes/hasui_mountains_jpeg/: mod.rs
rust/src/routes/main_css/: mod.rs
src/: app.html
src/data/: 2023.06.26.14.52.ts  Santoka standalone 2023.06.26.14.52.ts
src/lib/: Persistence.ts  Poems.ts  SequentialQueues.ts  States.ts  StatusCodes.ts  Time.ts
src/routes/: KeyboardShortcuts.ts  PoemTable.svelte  PublicationTable.svelte  Tabs.svelte
src/routes/detect-language/: Shared.ts
static/files/: core.css
