[package]
name = "santoka"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["macros"] }
dioxus = "0.3.2"
dioxus-ssr = "0.3.0"
once_cell = "1.18.0"
serde = "1.0.174"
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
ts-rs = "6.2.1"

[package.metadata.commands]
dev = { parallel = true, cmd = [
    "cargo cmd watch_tailwind",
    "cargo cmd watch_rust",
] }
build = [
    "cargo cmd build_tailwind_production",
    "cargo cmd build_rust_production",
]
deploy = [
    "cargo cmd build",
    "git add --all",
    "git commit -m 'Deploy'",
    "git push",
]
# preview = ["cargo cmd build_tailwind_production","cargo cmd preview_rust"]
setup = [
    "cargo install cargo-watch --version 8.4.0 --root ./target/.cargo_install",
    "cargo install cargo-bundle --version 0.6.0 --root ./target/.cargo_install",
    "npm install && mv node_modules ./target/node_modules",
]

watch_rust = "./target/.cargo_install/bin/cargo-watch -x 'cmd build_rust_dev'"
build_rust_dev = ["cargo cmd build_browser_dev", "cargo run -- dev"]
build_rust_production = [
    "cargo cmd build_browser_production",
    "cargo run -- build",
]
# preview_rust = ""

build_browser_dev = "cd browser && wasm-pack build --target web --dev --out-dir ../target/browser --out-name browser"
build_browser_production = "cd browser && wasm-pack build --target web --release --out-dir ../target/browser --out-name browser"

watch_tailwind = "npx --prefix ./target/node_modules tailwindcss -i ./src/main.css -o ./target/tailwind/built.css --watch"
build_tailwind_production = "npx --prefix ./target/node_modules tailwindcss -i ./src/main.css -o ./target/tailwind/built.css --minify"

# watch_dioxus = "./target/.cargo_install/bin/cargo-watch -x run"
# build_dioxus = "./target/.cargo_install/bin/cargo-bundle bundle --release"
# preview_dioxus = "./target/.cargo_install/bin/cargo-bundle bundle"
