[package]
name = "santoka"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["macros"] }
dioxus = "0.3.2"
dioxus-ssr = "0.3.0"
once_cell = "1.18.0"
serde = "1.0.174"
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
ts-rs = "6.2.1"

[build-dependencies]
chrono = "0.4.26"

[package.metadata.commands]
dev = { parallel = true, cmd = [
    "cargo cmd watch_tailwind",
    "cargo cmd watch_rust",
] }
build = [
    "cargo cmd build_tailwind_production",
    "cargo cmd build_rust_production",
]
preview = [
    "cargo cmd build",
    "./target/cargo_install/bin/simple-http-server --port 3000 --index built",
]
deploy = [
    "cargo cmd build",
    "git add --all",
    "git commit -m 'Deploy'",
    "git push",
]
setup = [
    "cargo install cargo-watch --version 8.4.0 --root ./target/cargo_install",
    "cargo install simple-http-server --version 0.6.7 --root ./target/cargo_install", # For previewing production builds.
    "npm install && mv node_modules ./target/node_modules",
]

watch_rust = "./target/cargo_install/bin/cargo-watch --watch ./src --watch ./browser -x 'cmd build_rust_dev'"
build_rust_dev = ["cargo cmd build_browser_dev", "cargo cmd server_dev"]
build_rust_production = [
    "cargo cmd build_browser_production",
    "cargo cmd build_server_production",
]
# preview_rust = ""

build_browser_dev = "cd browser && wasm-pack build --target web --dev --out-dir ../target/browser --out-name browser --features dev"
build_browser_production = "cd browser && wasm-pack build --target web --release --out-dir ../target/browser --out-name browser"

server_dev = "cargo run -- dev"
build_server_production = "cargo run -- build"

watch_tailwind = "npx --prefix ./target/node_modules tailwindcss -i ./src/main.css -o ./target/tailwind/built.css --watch"
build_tailwind_production = "npx --prefix ./target/node_modules tailwindcss -i ./src/main.css -o ./target/tailwind/built.css --minify"
