[workspace]
members = ["browser", "dev_and_build_server", "shared"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true

# Always build the backtrace crate with optimizations enabled, even in debug mode.
# This speeds up color-eyre.
#
# https://docs.rs/color-eyre/latest/color_eyre/#improving-perf-on-debug-builds
[profile.dev.package.backtrace]
opt-level = 3

# For cargo-commander.
[commands]
dev = { parallel = true, cmd = [
    "cargo cmd watch_tailwind",
    "cargo cmd watch_rust",
] }
build = [
    "cargo cmd build_tailwind_production",
    "cargo cmd build_rust_production",
]
preview = ["cargo cmd build", "cargo cmd serve_static_files"]
deploy = [
    "cargo cmd build",
    "git add --all",
    "git commit -m 'Deploy.'",
    "git push",
]
setup = [
    "cargo install cargo-watch --version 8.4.0 --root ./target/cargo_install",
    "cargo install wasm-pack --version 0.12.1 --root ./target/cargo_install",
    "cargo install wasm-opt --version 0.114.0 --root ./target/cargo_install",
    "cargo install simple-http-server --version 0.6.7 --root ./target/cargo_install", # For previewing production builds.
    "npm install && mv node_modules ./target/node_modules",
]

# Rust
build_rust_dev = [
    "cargo cmd build_browser_dev",
    "cargo cmd build_server_dev",
    "cargo cmd serve_static_files",
]
build_rust_production = [
    "cargo cmd build_browser_production",
    "cargo cmd build_server_production",
]

build_browser_dev = "cd browser && ./target/cargo_install/bin/wasm-pack build --target web --dev --out-dir ../target/browser --out-name browser --features dev"
build_browser_production = [
    # Build.
    "cd browser && ../target/cargo_install/bin/wasm-pack build --target web --release --out-dir ../target/browser --out-name browser",
    # Optimize wasm size.
    "cd browser && ../target/cargo_install/bin/wasm-opt -Os -o ../target/browser/browser_bg.wasm ../target/browser/browser_bg.wasm",
]

build_server_dev = "cargo run -- dev"
build_server_production = "cargo run -- build"
serve_static_files = "./target/cargo_install/bin/simple-http-server --port 3000 built"

# Tailwind
watch_tailwind = "npx --prefix ./target/node_modules tailwindcss -i ./dev_and_build_server/src/main.css -o ./target/tailwind/built.css --watch"
build_tailwind_production = "npx --prefix ./target/node_modules tailwindcss -i ./dev_and_build_server/src/main.css -o ./target/tailwind/built.css --minify"
watch_rust = "./target/cargo_install/bin/cargo-watch --watch ./dev_and_build_server --watch ./browser -x 'cmd build_rust_dev'"
