[package]
name = "browser"
version = "0.1.0"
authors = ["Luca Bailey <mail@photon.garden>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
dev = [
    "chrono",
    "console_error_panic_hook",
    "futures-util",
    "gloo",
    "once_cell",
    "wasm-bindgen-futures",
]

[dependencies]
wasm-bindgen = "0.2.84"
chrono = { version = "0.4.26", optional = true }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
futures-util = { version = "0.3.28", optional = true }
gloo = { version = "0.8.1", features = ["futures"], optional = true }
once_cell = { version = "1.18.0", optional = true }
wasm-bindgen-futures = { version = "0.4.37", optional = true }

[build-dependencies]
chrono = "0.4.26"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Document',
    'Element',
    'Headers',
    'HtmlElement',
    'Node',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
