[package]
name = "dev_and_build_server"
version = "0.1.0"
edition = "2021"
description = "The server for this project, used during development and for building the site."
license = "unlicensed"
repository = "https://github.com/photon-garden/santoka/"

[dependencies]
shared = { path = "../shared", features = ["server"] }
axum = { version = "0.6.18", features = ["macros"] }
color-eyre = "0.6.2"
dioxus = "0.3.2"
dioxus-ssr = "0.3.0"
image = { version = "0.24.6", features = ["webp-encoder"] }
once_cell = "1.18.0"
serde = "1.0.174"
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
ts-rs = "6.2.1"
minifier = "0.2.2"
minify-html = "0.11.1"

[build-dependencies]
chrono = "0.4.26"
